--- a/index.html
+++ b/index.html
@@ -562,11 +562,9 @@
                     <h6 class="category">AWS</h6>
                   </div>
                 </div>
-                <h3 class="card-title"><a href="blog-single.html">See more blogs about AWS</a></h3>
+                <h3 class="card-title"><a href="blog-single.html">My Journey To Get AWS Certified Cloud Practitioner</a></h3>
                 <p class="card-description">
-                  Proin eget tortor risus. Pellentesque in ipsum id orci porta dapibus. Praesent sapien massa, convallis
-                  a pellentesque nec,
-                  egestas non nisi.
+                  I would like to share my experience as Digital Talent Scholarship(DTS) Awardee from Ministry Communication and Information Indonesia.
                 </p>
               </div>
               <div class="card-footer">
