--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <p><span class="title-s">Name: </span> <span>Nova lailatul Rizkiyah</span></p>
                         <p><span class="title-s">Profile: </span> <span>AWS developer</span></p>
                         <p><span class="title-s">Email: </span> <span>novalailatulrizkiyah@gmail.com</span></p>
-                        <p><span class="title-s">Phone: </span> <span>(62) 857-2236-0974</span></p>
+                        <!-- <p><span class="title-s">Phone: </span> <span>(62) 857-2236-0974</span></p> -->
                       </div>
                     </div>
                   </div>
@@ -708,7 +708,7 @@
                       </p>
                       <ul class="list-ico">
                         <li><span class="bi bi-geo-alt"></span> Lumajang, East Java, Indonesia </li>
-                        <li><span class="bi bi-phone"></span> (62) 857-2236-0974</li>
+                        <!-- <li><span class="bi bi-phone"></span> (62) 857-2236-0974</li> -->
                         <li><span class="bi bi-envelope"></span> novalailatulrizkiyah@gmail.com</li>
                       </ul>
                     </div>
