--- a/index.html
+++ b/index.html
@@ -718,6 +718,8 @@
                         <li><a href="https://www.youtube.com/@studywithnova"><span class="ico-circle"><i class="bi bi-youtube"></i></span></a></li>
                         <li><a href="https://twitter.com/novarizkiyah"><span class="ico-circle"><i class="bi bi-twitter"></i></span></a></li>
                         <li><a href="https://www.linkedin.com/in/nova-rizkiyah/"><span class="ico-circle"><i class="bi bi-linkedin"></i></span></a></li>
+                        <li><a href="https://www.goodreads.com/user/show/94412375-nova-lailatul-rizkiyah"><span class="ico-circle"><i class="bi bi-book"></i></span></a></li>
+                        
                       </ul>
                     </div>
                   </div>
