--- a/blog-single.html
+++ b/blog-single.html
@@ -124,33 +124,42 @@
                 <p align="justify">
                   I would like to share my experience as Digital Talent Scholarship(DTS) Awardee from Ministry Communication and Information Indonesia. As awardee last year, why I choose to get this Academy again in 2020? Not to mention that, I get chance in DTS Fresh Graduate Academy (FGA) in Informatics ITB last year choose Artificial Intelligence. Actually I get much that knowledge, but at that time the curriculum was mix between Cloud Computing using Amazon Web Service (AWS) for 2 weeks then Machine Learning for 4 weeks. Our project about Machine Learning, but the last exam about Cloud Computing. Because I don’t really get the whole concept and whole theory so I can’t get voucher to AWS Cloud Practitioner (and maybe I too dumb and my score under the rank). But, you know Cloud Computing and Machine Learning was different topics. But, at that time I don’t really understand yet.
                 </p>
-                <p align=""justify>
+                <p align="justify">
                   Like FGA 2019, before accepted as awardee I must doing exam 40 questions in 30 minutes. Previously, I already studied AWS material, but the exam turns out about Network.
                 </p>
                 <img src="https://i.redd.it/hyrf22qlsmr81.gif">
-                <p>
-                  Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Lorem ipsum dolor sit amet, consectetur
-                  adipiscing elit. Praesent
-                  sapien massa, convallis a pellentesque nec, egestas non nisi. Lorem ipsum dolor sit amet,
-                  consectetur adipiscing elit. Curabitur arcu erat, accumsan id imperdiet et, porttitor at
-                  sem. Donec rutrum congue leo eget malesuada.
+                <p align="justify">
+                  But, its just lucky me, I got accepted. Oh ya, I choose Faculty of Computer Science University Indonesia because I want new atmosphere :)
+                <p align="justify">
+                  Like syllabus, the schedule quite full, every single day, we get minimum 3 hours Zoom explanations from supporting lecturer (1.5 hours for theory, 1.5 hours for hands-on) in 35 days although Saturday and Sunday. Yeah… thank you our lecturer.
                 </p>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quis lorem ut libero malesuada feugiat.
-                  Curabitur arcu erat,
-                  accumsan id imperdiet et, porttitor at sem. Vivamus suscipit tortor eget felis porttitor
-                  volutpat. Vivamus suscipit tortor eget felis porttitor volutpat. Quisque velit nisi, pretium
-                  ut lacinia in, elementum id enim.
+                <p align="justify">
+                  The most challenging things for me is dividing my time between my duties at home as a mother with a toddler. So, in early morning I do other tasks like cooking and tidying up the house, at 8 o’clock, every single day(35 days) I do zoom’s video with lecturers and friends. I did it continuously without skipping because I enjoyed learning AWS, even though we were allowed to skip a maximum of 2 days. What’s interesting is, my friends in class are students who just graduated from bachelor degree, of course my phase has to follow their phase and it’s not difficult for me, who are 4 years apart from them. The challenge for me was persuading my daughter to allow her mother to study without being interrupted for minimum 3 hours every day. Fortunately, my 2.5 year old’s daughter was able to cooperate(ps: thanks to my husband too :D).
                 </p>
                 <blockquote class="blockquote">
-                  <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+                  <p class="mb-0">“Perseverance, secret of all triumphs.” — Victor Hugo</p>
                 </blockquote>
-                <p>
-                  Nulla porttitor accumsan tincidunt. Cras ultricies ligula sed magna dictum porta. Mauris blandit
-                  aliquet elit, eget tincidunt
-                  nibh pulvinar a. Cras ultricies ligula sed magna dictum porta. Lorem ipsum dolor sit amet,
-                  consectetur adipiscing elit. Donec sollicitudin molestie malesuada.
+                <p align="justify">
+                  Because I aspiring to be Software Engineer (haha, read=a cool and nerd human in history), I try to writing what I know and what I don’t know in this medium. Like many newbie at everything, I just allow myself to make some mistakes. If not, then I never learned anything. But, to be more precise, I will ask my friends to proof-reading to correct it.
                 </p>
+                <script src="https://gist.github.com/novarizkiyah/95cc4ed7985c6faa27dd9bd9d283a653.js"></script>
+                <p align="justify">
+                  Here we go, I would share my one month experience this medium, in the next post. Actually, I want to explain material with my own view and several resources beyond what I’ve got previously. Maybe will be a little difference from the syllabus.
+                </p>
+                <p align="justify">
+                  After exam every weeks from Dicoding, I got free voucher exam of AWS Cloud Practitioner. In our class, from 23 students, only 18 students who get voucher. I will tell you how the process before, during and after the Cloud Practitioner exam.
+                </p>
+                <h4>
+                  Before Exam
+                </h4>
+                <p align="justify">
+                  So, we get voucher to exam using PSI, although in many online reviews it’s better to use Pearson VUE. But because we got the PSI voucher, like or not we have to use PSI. The problem is there are some of my friends who experienced problems before or during the exam such like proctors who did not come and even waited for 3 hours, there was no clarity on the process when the exam could or not be held, etc. The solution my friend has already done is send an email to examschedule@psionline.com,
+cdcaresocial@psionline.com, jmartin@psionline.com. Besides that also submit a request to this and send email to PSI costumer service in this link by describing the situation that occurred before or during the AWS exam. My friend usually gets reschedule for exams, so that is likely to be resolved. My advice is if we are in Indonesia (and use PSI) choose the exam at night, because our time(WIB) is 12 hours ahead from USA.
+                </p>
+                <p>
+                  How to register for the AWS Cloud Practitioner exam (CLF-01 and other AWS exams)
+                </p>
+              
               </div>
             </div>
             <div class="box-comments">
@@ -362,7 +371,7 @@
               Licensing information: https://bootstrapmade.com/license/
               Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=DevFolio
             -->
-              Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+              Designed by <a href="https://bootstrapmade.com/">BootstrapMade with editing by Nova </a>
             </div>
           </div>
         </div>
