--- a/blog-single.html
+++ b/blog-single.html
@@ -127,7 +127,7 @@
                 <p align="justify">
                   Like FGA 2019, before accepted as awardee I must doing exam 40 questions in 30 minutes. Previously, I already studied AWS material, but the exam turns out about Network.
                 </p>
-                <img src="https://i.redd.it/hyrf22qlsmr81.gif">
+                <center><img src="https://i.redd.it/hyrf22qlsmr81.gif"></center>
                 <p align="justify">
                   But, its just lucky me, I got accepted. Oh ya, I choose Faculty of Computer Science University Indonesia because I want new atmosphere :)
                 <p align="justify">
@@ -144,9 +144,6 @@
                 </p>
                 <script src="https://gist.github.com/novarizkiyah/95cc4ed7985c6faa27dd9bd9d283a653.js"></script>
                 <p align="justify">
-                  Here we go, I would share my one month experience this medium, in the next post. Actually, I want to explain material with my own view and several resources beyond what I’ve got previously. Maybe will be a little difference from the syllabus.
-                </p>
-                <p align="justify">
                   After exam every weeks from Dicoding, I got free voucher exam of AWS Cloud Practitioner. In our class, from 23 students, only 18 students who get voucher. I will tell you how the process before, during and after the Cloud Practitioner exam.
                 </p>
                 <h4>
@@ -159,7 +156,15 @@ cdcaresocial@psionline.com, jmartin@psionline.com. Besides that also submit a re
                 <p>
                   How to register for the AWS Cloud Practitioner exam (CLF-01 and other AWS exams)
                 </p>
-              
+                <ol type="1">
+                  <li>Sign in to aws.training using an your Amazon account, not AWS.</li>
+                  <li>In the Dashboard and Learning Library there are materials you can learn about AWS services that might help improve AWS CLF-01 exam preparation. Then click Certification then click Go to Your Account.</li>
+                  <li>You have entered certmetrics then select Request Accommodation Exam then click ESL (English at Second Language) +30 if you wanna increase the exam time from 90 minutes to 120 minutes.</li>
+                  <li>Then select Manage PSI Exam or Manage Pearson Vue Exam and select online from my home or office.</li>
+                  <li>Next, check the technical requirements for your device and internet network, for Pearson Vue at here </li>
+                  <li>Then choose the schedule you want, and pay for the exam using CC or Jenius/Jago debit. DONE, congratulations, you have registered for the exam.</li>
+                  
+                </ol> 
               </div>
             </div>
             <div class="box-comments">
