--- a/blog-single.html
+++ b/blog-single.html
@@ -162,8 +162,44 @@
                   <li>Then select Manage PSI Exam or Manage Pearson Vue Exam and select online from my home or office.</li>
                   <li>Next, check the technical requirements for your device and internet network, for Pearson Vue at here </li>
                   <li>Then choose the schedule you want, and pay for the exam using CC or Jenius/Jago debit. DONE, congratulations, you have registered for the exam.</li>
-                  
                 </ol> 
+                <h4>
+                  Study Tips
+                </h4>
+                <p align="justify">
+                  From several articles I have read, learning new things is certainly not easy. What we can do is reconstruct the mind by noting the points that we understand and what we haven’t understood in the book. Taking notes or writing on paper can be the optimal way of learning, although not everything must be noted. You can also write or type on blog, explain again what we have learned using our own language. After that, it really needs to be repeated again in order to get used to the concept, then an independent test where we try as if we are on an exam so that we are not surprised when the actual exam.
+                </p>
+                <p align="justify">
+                  Hands-on learning is very helpful, aws are advised to study for 6 months as preparation. For us, because the program is only 1 month, it only has limited time and independent exploration, and about 2–3 weeks of studying again specifically for exams. In total, I have 2 months of preparation.
+                </p>
+                <center><img src ="assets/img/pqge.png"></center>
+                <h4>
+                  During Exam
+                </h4>
+                <p align="justify">
+                  Make sure you are in a closed room (doors and windows closed), alone (no one is accompanying you).
+                </p>
+                <ol>
+                  <li>Click the lauch exam from aws.training, download the software, then install the PSI/Pearson Vue browser (Now, just only Pearson Vue)</li>
+                  <li>Photo ID Chart</li>
+                  <li>Face photo by system</li>
+                  <li>Wait for verification from proctor</li>
+                  <li>Proctor chat or make conversations (ask for points 6 and 7)</li>
+                  <li>Showing the room 360 degrees, including under the table.</li>
+                  <li>Show our handphone to the proctor then put it behind us or put it in a place beyond our reach</li>
+                  <li>Launch exam</li>
+                  <li>90 minute exam. When the exam is asked not to make a sound or whisper.</li>
+                  <li>When finished, the program will automatically show that you passed the exam or not.</li>
+                  <li>After that the proctor will chat that the exam has been completed and the program will automatically close.</li>
+                </ol>
+                <h4>
+                  After Exam
+                </h4>
+                <p align="justify">Usually the exam results will take about 1–3 days. You will receive your certificate and test scores. For certificates as below.</p>
+                <center><img src="assets/img/certfct.png"></center>
+                <p align="justify">After the exam and getting the certificate and then? Show, show and show that you deserve it by writing your version of documentation, or making simple videos of what you’ve learned. Everything starts with the fundamentals. All seniors engineer start from juniors engineer, so keep the enthusiasm for learning and self-actualizing. :))</p>
+                <p>Nova Lailatul Rizkiyah, newbie at everything so that she can learn anything.</p>
+                <p>Feb 19, 2021</p>
               </div>
             </div>
             <div class="box-comments">
@@ -334,19 +370,19 @@
               <div class="sidebar-content">
                 <ul>
                   <li>
-                    <a href="#">Web.</a>
+                    <a href="#">AWS</a>
                   </li>
                   <li>
-                    <a href="#">Design.</a>
+                    <a href="#">Cloud</a>
                   </li>
                   <li>
-                    <a href="#">Travel.</a>
+                    <a href="#">Linux</a>
                   </li>
                   <li>
-                    <a href="#">Photoshop</a>
+                    <a href="#">Python</a>
                   </li>
                   <li>
-                    <a href="#">Corel Draw</a>
+                    <a href="#">Web</a>
                   </li>
                   <li>
                     <a href="#">JavaScript</a>
