--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="hero-title mb-4">I'm Nova Rizkiyah</h1>
-          <p class="hero-subtitle"><span class="typed" data-typed-items="Developer, Freelancer, Writer"></span></p>
+          <p class="hero-subtitle"><span class="typed" data-typed-items="Cloud Engineer, Freelancer, Writer"></span></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
@@ -90,7 +90,7 @@
                     <div class="col-sm-6 col-md-7">
                       <div class="about-info">
                         <p><span class="title-s">Name: </span> <span>Nova lailatul Rizkiyah</span></p>
-                        <p><span class="title-s">Profile: </span> <span>AWS developer</span></p>
+                        <p><span class="title-s">Profile: </span> <span>Cloud Engineer</span></p>
                         <p><span class="title-s">Email: </span> <span>novalailatulrizkiyah@gmail.com</span></p>
                         <!-- <p><span class="title-s">Phone: </span> <span>(62) 857-2236-0974</span></p> -->
                       </div>
