--- a/blog-single.html
+++ b/blog-single.html
@@ -127,7 +127,11 @@
                 <p align="justify">
                   Like FGA 2019, before accepted as awardee I must doing exam 40 questions in 30 minutes. Previously, I already studied AWS material, but the exam turns out about Network.
                 </p>
-                <center><img src="https://i.redd.it/hyrf22qlsmr81.gif"></center>
+                <figure>
+                  <center><img src="https://i.redd.it/hyrf22qlsmr81.gif"></center>
+                  <center><figcaption> Uncle Roger Thanks for the Meme</figcaption></center>
+                </figure>
+                
                 <p align="justify">
                   But, its just lucky me, I got accepted. Oh ya, I choose Faculty of Computer Science University Indonesia because I want new atmosphere :)
                 <p align="justify">
@@ -153,11 +157,11 @@
                   So, we get voucher exam using PSI, although in many online reviews it’s better to use Pearson VUE. But because we got the PSI voucher, like or not we have to use PSI. The problem is there are some of my friends who experienced problems before or during the exam such like proctors who did not come and even waited for 3 hours, there was no clarity on the process when the exam could or not be held, etc. The solution my friend has already done is send an email to examschedule@psionline.com or send email to PSI costumer service in this link by describing the situation that occurred before or during the AWS exam. My friend usually gets reschedule for exams, so that is likely to be resolved. My advice is if we are in Indonesia (and use PSI) choose the exam at night, because our time(WIB) is 12 hours ahead from the US time.
                 </p>
                 <p>
-                  How to register for the AWS Cloud Practitioner exam (CLF-01 and other AWS exams)
+                  How to register for the AWS Cloud Practitioner exam (CLF-C01 and other AWS exams)
                 </p>
                 <ol type="1">
                   <li>Sign in to aws.training using your Amazon account, not AWS.</li>
-                  <li>In the Dashboard and Learning Library there are materials you can learn about AWS services that might help improve AWS CLF-01 exam preparation. Then click Certification then click Go to Your Account.</li>
+                  <li>In the Dashboard and Learning Library there are materials you can learn about AWS services that might help improve AWS CLF-C01 exam preparation. Then click Certification then click Go to Your Account.</li>
                   <li>You have entered certmetrics then select Request Accommodation Exam then click ESL (English at Second Language) +30 if you wanna increase the exam time from 90 minutes to 120 minutes.</li>
                   <li>Then select Manage PSI Exam or Manage Pearson Vue Exam and select online from my home or office.</li>
                   <li>Next, check the technical requirements for your device and internet network, for Pearson Vue at here </li>
@@ -172,7 +176,11 @@
                 <p align="justify">
                   Hands-on learning is very helpful, aws are advised to study for 6 months as preparation. For us, because the program is only 1 month, it only has limited time and independent exploration, and about 2–3 weeks of studying again specifically for exams. In total, I have 2 months of preparation.
                 </p>
-                <center><img src ="assets/img/pqge.png"></center>
+                <figure>
+                  <center><img src ="assets/img/pqge.png"></center>
+                  <center><figcaption>Paper everywhere</figcaption></center>
+                </figure>
+                
                 <h4>
                   During Exam
                 </h4>
@@ -196,7 +204,10 @@
                   After Exam
                 </h4>
                 <p align="justify">Usually the exam results will take about 1–3 days. You will receive your certificate and test scores. For certificates as below.</p>
-                <center><img src="assets/img/certfct.png"></center>
+                <figure>
+                  <center><img src="assets/img/certfct.png"></center>
+                  <center><figcaption>My first cloud certificate</figcaption></center>
+                </figure>
                 <p align="justify">After the exam and getting the certificate and then? Show, show and show that you deserve it by writing your version of documentation, or making simple videos of what you’ve learned. Everything starts with the fundamentals. All seniors engineer start from juniors engineer, so keep the enthusiasm for learning and self-actualizing. :))</p>
                 <p>Nova Lailatul Rizkiyah, newbie at everything so that she can learn anything.</p>
                 <p>Feb 19, 2021</p>
