--- a/blog-single.html
+++ b/blog-single.html
@@ -205,7 +205,7 @@
                 </h4>
                 <p align="justify">Usually the exam results will take about 1–3 days. You will receive your certificate and test scores. For certificates as below.</p>
                 <figure>
-                  <center><img src="assets/img/certfct.png"></center>
+                  <center><img src="assets/img/cert.png"></center>
                   <center><figcaption>My first cloud certificate</figcaption></center>
                 </figure>
                 <p align="justify">After the exam and getting the certificate and then? Show, show and show that you deserve it by writing your version of documentation, or making simple videos of what you’ve learned. Everything starts with the fundamentals. All seniors engineer start from juniors engineer, so keep the enthusiasm for learning and self-actualizing. :))</p>
