--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
                       <div class="about-info">
                         <p><span class="title-s">Name: </span> <span>Nova lailatul Rizkiyah</span></p>
                         <p><span class="title-s">Profile: </span> <span>Cloud Engineer</span></p>
-                        <p><span class="title-s">Email: </span> <span>novalailatulrizkiyah@gmail.com</span></p>
+                        <p><span class="title-s">Hobby: </span> <span>Cycling, Reading </span></p>
+                        <p><span class="title-s">Favorite Book: </span> <span>Surely You're Joking, Mr. Feynman!</span></p>
+                        <!-- <p><span class="title-s">Email: </span> <span>novalailatulrizkiyah@gmail.com</span></p> -->
                         <!-- <p><span class="title-s">Phone: </span> <span>(62) 857-2236-0974</span></p> -->
                       </div>
                     </div>
@@ -583,7 +585,7 @@
           <div class="col-md-4">
             <div class="card card-blog">
               <div class="card-img">
-                <a href="blog-single.html"><img src="assets/img/post-2.jpg" alt="" class="img-fluid"></a>
+                <a href="blog-single2.html"><center><img src="https://d1.awsstatic.com/training-and-certification/certification-badges/AWS-Certified-Solutions-Architect-Associate_badge.3419559c682629072f1eb968d59dea0741772c0f.png" alt="" class="img-fluid"></a></center>
               </div>
               <div class="card-body">
                 <div class="card-category-box">
@@ -591,11 +593,9 @@
                     <h6 class="category">AWS</h6>
                   </div>
                 </div>
-                <h3 class="card-title"><a href="blog-single.html">See more tutorials about AWS</a></h3>
+                <h3 class="card-title"><a href="blog-single.html">Step by Step AWS Solution Architect-Associate Preparation</a></h3>
                 <p class="card-description">
-                  Proin eget tortor risus. Pellentesque in ipsum id orci porta dapibus. Praesent sapien massa, convallis
-                  a pellentesque nec,
-                  egestas non nisi.
+                  Hello everyone, my Name is Nova and I’m AWS Certified Solution Architect-Associates(SAA). How my whole story to preparation AWS SAA C-03 exam?
                 </p>
               </div>
               <div class="card-footer">
