--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <!-- <li><a class="nav-link scrollto" href="#services">Services</a></li> -->
           <!-- <li><a class="nav-link scrollto " href="#work">Projects</a></li> -->
           <li><a class="nav-link scrollto " href="#blog">Blog</a></li>
-          
+          <li><a class="nav-link scrollto " href="https://docs.google.com/document/d/1ZkxvREPsIPMp2a84YZ4slqAbhheLLqMimmz4gjM2aL4/edit?usp=sharing">Resume</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
