--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                       </h5>
                     </div>
                     <p class="lead">
-                      Hi, My name is Nova, I have a bachelor and master's degree in physics from Bandung Institute of Technology (ITB), Indonesia. But, life chooses me to explore new things like cloud computing, Linux-based, information technology. I'm AWS Community Builder -Year Two- and AWS Solutions Architect – Associate Certified. I'm a housewife, mother, and AWS Developer in tech consultant Japan (part-time and working remotely)
+                      Hi everyone, I'm Nova! I have a bachelor and master's degree in physics from Bandung Institute of Technology (ITB), Indonesia. But, life chooses me to explore new things like Cloud Computing, Linux, Information Technology. I'm AWS Community Builder -Year Two- and AWS Solutions Architect – Associate Certified. I'm a housewife, mother, and Cloud Engineer in Japan tech consultant (part-time and working remotely).
                     </p>
                     <!-- <p class="lead">
                       Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Vivamus suscipit tortor eget felis
