--- a/blog-single2.html
+++ b/blog-single2.html
@@ -141,7 +141,7 @@
                 <p align="justify">This is my learning content in AWS Academy for total 170 hours for Cloud Foundations and Cloud Architecting</p>
                 <script src="https://gist.github.com/novarizkiyah/0a43b865af97116508a281f620e55feb.js"></script></script>
                 <h4>Exam Tips & Trick</h4>
-                <p align="justify">So, in fact, I just preparation to AWS SAA C-02 exam. At that time, I think AWS SAA C-02 and SAA C-03 is just same :”). The study material like this.</p>
+                <p align="justify">So, in fact, I just preparation to AWS SAA C-02 exam. At that time, I think AWS SAA C-02 and SAA C-03 is just same, actually SAA C-03 is much harder than SAA C-02 due to different weights in some domains  :”). The study material like this.</p>
                 <ol>
                   <li>https://aws.amazon.com/training/classroom/architecting-on-aws/ This link consist of some virtual class (maybe this is not free, but you can check in AWS Skill builder too) for 3 days (8 hours x 3 days, 24 hours total), hands-on lab AWS in qwiklabs, access to Bookshelf for 1 years (Architecting on AWS Student Guide and Lab Guide). All of modul like this.</li>
                   <li>AWS Academy because of participant of DTS. Architecting Curriculum for total 170 hours (labs and theory) plus quiz in every modul, and exam in the last day of event.</li>
@@ -160,9 +160,11 @@
                 <p align="justify">130 minutes plus 30 minutes, the exam is so difficult (cry). Some of the questions and multiple choice but it’s hard for me to understand the some words . Some of the questions are tricky if you’re not careful. Questions about the latest AWS technology all came out like: Amazon Lex and friends. :”</p>
                 <p align="justify">After I took the test, the results were not immediately shown. Then I opened LinkedIn and read a friend’s post who had already done SAA C-03, they said it was quite difficult, it seems we are getting the same problem questions. Ha ha…..</p>
                 <p align="justify">The next day, I was told that I had failed the exam. My score is only 643.</p>
-                <img>
-                <img>
-                <p>And interestingly I do not meet in all domains of competence. Wow…. it means that in all my domains it is still below the standard with a value of 643 earlier. I read an article on Reddit that has the exact same value as mine, maybe 3 to 5 questions wrong towards the standard value. Because a maximum of 5 questions is not a lot, so I tried to change the learning strategy. Although I sad but I have to accept.</p>
+                <figure>
+                  <center><img src ="assets/img/aws1.png" width="600" height="90"></center>
+                  <center><figcaption>Failed at my first SAA C-03 exam</figcaption></center>
+                </figure>
+                <p>And interestingly I do not meet in all domains of competence. Wow…. it means that in all my domains it is still below the minimum standard with a value of 643 earlier. I read an article on Reddit that has the exact same value as mine, maybe 3 to 5 questions wrong towards the standard value. Because a maximum of 5 questions is not a lot, so I tried to change the learning strategy. Although I sad but I have to accept.</p>
                 <p>I still have one last exam voucher that I can use. Because I still remember some questions that I couldn’t answer, I wrote down the points one by one and searched the official AWS documentation about the material.</p>
                 <h4>Exam Again</h4>
                 <p align="justify">After that, I had access to the Tutorials Dojo Practice Exam and it helped me in understanding the Domains that I still didn’t understand. Once I was ready, I took another test, this time using Pearson Vue. Because Pearson Vue can’t use a Linux-based laptop, it must be Mac or Windows, so I borrowed my husband’s laptop for this home test. Exactly on September 29, 2022, I took my second exam because the next day, September 30, 2022, the voucher given by the AWS Community Builder Team expired.</p>
