--- a/blog-single2.html
+++ b/blog-single2.html
@@ -162,9 +162,13 @@
                 <p align="justify">The next day, I was told that I had failed the exam. My score is only 643.</p>
                 <figure>
                   <center><img src ="assets/img/aws1.png" width="600" height="90"></center>
-                  <center><figcaption>Failed at my first SAA C-03 exam</figcaption></center>
+                  <center><figcaption>Failed at my first SAA-C03 exam</figcaption></center>
                 </figure>
-                <p>And interestingly I do not meet in all domains of competence. Wow…. it means that in all my domains it is still below the minimum standard with a value of 643 earlier. I read an article on Reddit that has the exact same value as mine, maybe 3 to 5 questions wrong towards the standard value. Because a maximum of 5 questions is not a lot, so I tried to change the learning strategy. Although I sad but I have to accept.</p>
+                <p>I don't meet in all domains of competence. Wow…. it means that in all my domains it is still below the minimum standard with a value of 643 earlier. I read an article on Reddit that has the exact same value as mine, maybe 3 to 5 questions wrong towards the standard value. Because a maximum of 5 questions is not a lot, so I tried to change the learning strategy. Although I sad but I have to accept.</p>
+                <figure>
+                  <center><img src ="assets/img/aws2.png" width="600" height="130"></center>
+                  <center><figcaption>Need improvement in all of domain SAA-C03</figcaption></center>
+                </figure>
                 <p>I still have one last exam voucher that I can use. Because I still remember some questions that I couldn’t answer, I wrote down the points one by one and searched the official AWS documentation about the material.</p>
                 <h4>Exam Again</h4>
                 <p align="justify">After that, I had access to the Tutorials Dojo Practice Exam and it helped me in understanding the Domains that I still didn’t understand. Once I was ready, I took another test, this time using Pearson Vue. Because Pearson Vue can’t use a Linux-based laptop, it must be Mac or Windows, so I borrowed my husband’s laptop for this home test. Exactly on September 29, 2022, I took my second exam because the next day, September 30, 2022, the voucher given by the AWS Community Builder Team expired.</p>
