--- a/blog-single2.html
+++ b/blog-single2.html
@@ -161,12 +161,12 @@
                 <p align="justify">After I took the test, the results were not immediately shown. Then I opened LinkedIn and read a friend’s post who had already done SAA C-03, they said it was quite difficult, it seems we are getting the same problem questions. Ha ha…..</p>
                 <p align="justify">The next day, I was told that I had failed the exam. My score is only 643.</p>
                 <figure>
-                  <center><img src ="assets/img/aws1.png" width="600" height="90"></center>
+                  <center><img src ="assets/img/aws1.png" width="600" height="100"></center>
                   <center><figcaption>Failed at my first SAA-C03 exam</figcaption></center>
                 </figure>
                 <p>I don't meet in all domains of competence. Wow…. it means that in all my domains it is still below the minimum standard with a value of 643 earlier. I read an article on Reddit that has the exact same value as mine, maybe 3 to 5 questions wrong towards the standard value. Because a maximum of 5 questions is not a lot, so I tried to change the learning strategy. Although I sad but I have to accept.</p>
                 <figure>
-                  <center><img src ="assets/img/aws2.png" width="600" height="130"></center>
+                  <center><img src ="assets/img/aws2.png" width="600" height="140"></center>
                   <center><figcaption>Need improvement in all of domain SAA-C03</figcaption></center>
                 </figure>
                 <p>I still have one last exam voucher that I can use. Because I still remember some questions that I couldn’t answer, I wrote down the points one by one and searched the official AWS documentation about the material.</p>
@@ -174,19 +174,34 @@
                 <p align="justify">After that, I had access to the Tutorials Dojo Practice Exam and it helped me in understanding the Domains that I still didn’t understand. Once I was ready, I took another test, this time using Pearson Vue. Because Pearson Vue can’t use a Linux-based laptop, it must be Mac or Windows, so I borrowed my husband’s laptop for this home test. Exactly on September 29, 2022, I took my second exam because the next day, September 30, 2022, the voucher given by the AWS Community Builder Team expired.</p>
                 <p align="justify">It says next year there will be no more exams on PSI, so just using Pearson Vue as AWS exam provider, but I hope that Linux Ubuntu based laptops can test, not just Windows and Mac.:”))</p>
                 <p align="justify">The second exam was much easier I think because I had studied more. This time the questions given were as I expected. So I only spent 60 minutes for the test and close. The next day I was told that my credly had new badge, AWS SAA.</p>
-                <img>
-                <img>
-                <img>
-                <p align="justify">The minimum is 720, so I’m only slightly better than the lowest standard for passes, but I’ve covered all competency domains and I’ve made a lot of progress (from 643 to 759). But for information that I don’t have an information technology background, I study physics in college (Hello, Einstein Theory of Relativity) so I had to learn autodidact many times in this field, also learn to be patient and have high deterministic skills because that’s all I can afford.</p>
-                <img>
+                <figure>
+                  <center><img src ="assets/img/aws3.png" width="600" height="300"></center>
+                  <center><figcaption>Email from Credly that I have earn SAA Certificate</figcaption></center>
+                </figure>
+                <p align="justify">The minimum for pass SAA is 720, so I’m only slightly better than the lowest standard for passes, but I’ve covered all competency domains and I’ve made a lot of progress (from 643 to 759). But for information that I don’t have an information technology background, I study physics in college (Hello, Einstein Theory of Relativity) so I had to learn autodidact many times in this field, also learn to be patient and have high deterministic skills because that’s all I can afford.</p>
+                <figure>
+                  <center><img src ="assets/img/aws4.png" width="600" height="100"></center>
+                  <center><figcaption>My SAA score</figcaption></center>
+                </figure>
+                <figure>
+                  <center><img src ="assets/img/aws5.png" width="600" height="130"></center>
+                  <center><figcaption>My score performence per domain</figcaption></center>
+                </figure>
                 <h4>Conclusion</h4>
                 <p align="justify">There are many people who ask what is the importance of Certification? It could be that a certificate like this is not important in this world. You see, certification is intended to be a minimum standard of mastery of a material. This makes it easier for various parties/companies who need standards in the industry.</p>
                 <p align="justify">If the question is, is it all enough with just certification? Of course the answer is no. Because Certification is only a minimum standard, we must have an excellent ability in that field by having good documentation, either by writing or making Youtube videos. This documentation process is also part of the learning process. As well as Feynman Technique, My favorite physicist after Newton and Einstein, the learning process is experimental, like someone can explain to other people with very different backgrounds or explain to children the work we do and get feedback, they understands or not.</p>
                 <p align="justify">So for example when we fail, we don’t see only from one side of the failure but what we can learn from the that failed test. There is a story of a man who hit a stone with a hammer 99 times but the stone has not broken, on the 100th blow then the stone breaks. The question is whether the previous 99 hits are useless because it only takes 1 last hit for the stone to break? Of course not, the 99 strokes was an accumulation of the learning process and coincidentally the last momentum in the 100 strokes, the goal can be achieved.</p>
+                <figure>
+                  <center><img src ="assets/img/aws6.png" width="600" height="350"></center>
+                  <center><figcaption>my SAA certificate</figcaption></center>
+                </figure>
                 <p align="justify">Well, because I know that my goal is to work in this field, the certification process is part of my learning journey in a field that is very different from what I used to do (physics). Of course in the future, I will be more courageous and willing to make documentation and work on many more advanced projects even though I know I feel like a beginner.</p>
                 <p align="justify">Hands-on lab plus theory at AWS Academy (> than 170 hours) and all links related to exam tips at the beginning of the article, personal documentation on Youtube, practice tests were the right combination for me to succeed in the AWS SAA C- 03 exam which is the last free exam voucher that I have.</p>
                 <p align="justify">For my friends who will take the AWS SAA C-03 certification, my advice is to look at the official AWS syllabus here. The exam guide really helps us to understand which domains we don’t understand, sample questions are useful for whether we are ready for the exam or not, as well as the official practice question set which is like an official exam situation, plus free courses from aws training .</p>
-                <img>
+                <figure>
+                  <center><img src ="assets/img/aws7.png" width="600" height="80"></center>
+                  <center><figcaption>my exam history</figcaption></center>
+                </figure>
                 <p>So, what are your tips and tricks for studying? Please comment to add insight!</p>
                 
                 
